# diario-constituinte

./: .devenv.flake.nix  .gitignore  LICENSE  README.md  annotation_ui.py  crawler.py  devenv.nix  embed_texts.py  extract.py  prepare_data_for_annotation.py  pyproject.toml  sentences.txt  tests.py  ui.py
.devenv/: profile  run
.devenv/gc/: shell-1-link
annotations/: __main__.py  db.py  export_sentences.py  populatedb.py
extractions/: 001anc02Fev1987.txt  002anc03fev1987.txt  003anc04fev1987.txt  004anc05fev1987.txt  005anc06fev1987.txt  007anc10fev1987.txt  008anc11fev1987.txt  009anc12fev1987.txt  010anc13fev1987.txt  012anc17fev1987.txt  013anc18fev1987.txt  014anc19fev1987.txt  015anc20fev1987.txt  018anc23fev1987.txt  019anc24fev1987.txt  020anc25fev1987.txt  021anc26fev1987.txt  022anc27fev1987.txt  024anc10mar1987.txt  025anc11mar1987.txt  026anc12mar1987.txt  027anc13mar1987.txt  029anc18mar1987.txt  030anc19mar1987.txt  031anc20mar1987.txt  033anc25mar1987.txt  034anc26mar1987.txt  035anc27mar1987.txt  037anc01abr1987.txt  038anc02abr1987.txt  039anc03abr1987.txt  041anc08abr1987.txt  042anc09abr1987.txt  043anc10abr1987.txt  045anc15abr1987.txt  046anc16abr1987.txt  047anc22abr1987.txt  048anc23abr1987.txt  049anc24abr1987.txt  051anc29abr1987.txt  (+209 more)
