[tool.poetry]
name = "diario-constituinte-crawler"
version = "0.1.0"
description = ""
authors = ["Guilherme Kenzo <guilhermekenzos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests-html = "^0.10.0"
lxml-html-clean = "^0.2.0"
pypdf2 = "^3.0.1"
pymupdf = "^1.24.9"
streamlit = "^1.37.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
