[tool.poetry]
name = "diario-constituinte-crawler"
version = "0.1.0"
description = ""
authors = ["Guilherme Kenzo <guilhermekenzos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests-html = "^0.10.0"
lxml-html-clean = "^0.2.0"
pypdf2 = "^3.0.1"
pymupdf = "^1.24.9"
streamlit = "^1.37.1"
click = "^8.1.7"
transformers = "^4.44.2"
torch = "^2.4.0"
datasets = "^2.21.0"
evaluate = "^0.4.2"
sentence-transformers = "^3.0.1"
jupyterlab = "^4.2.5"
dash = "^2.17.1"
lorem-text = "^2.1"
loguru = "^0.7.2"
sqlalchemy = "^2.0.32"
pytest = "^8.3.2"
ipython = "^8.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
